--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -13,10 +13,18 @@ jobs:
           git --version
       - name: copying the codes # its a default action provided by github. this action will copy the codes from the github repository to the runner source: https://github.com/marketplace/actions/checkout
         uses: actions/checkout@v5 
+
       - name: install secific node version e.g v22.18.0 # soruce : https://github.com/marketplace/actions/setup-node-js-environment
         uses: actions/setup-node@v4
         with:
           node-version: '22.18.0'
+
       - name: check node version
         run: node -v
+
+      - name: install dependencies
+        run: npm install
+        
+      - name: build the app
+        run: npm run build
         
